discussion/platform.ui/192465/192465_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Use Thread.yield() instead of yield()

As per https://openjdk.java.net/jeps/361 yield is restricted identifier
and this breaks javadoc build with Java 17 with:
"
../../../eclipse.platform.ui/bundles/org.eclipse.ui.workbench/Eclipse
UI/org/eclipse/ui/application/WorkbenchAdvisor.java:759: error: invalid
use of a restricted identifier 'yield'
					yield();
					^
  (to invoke a method called yield, qualify the yield with a receiver or
type name)
  "

Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>

Change-Id: Ib769d0e744c786871dffb94bd297f96c2c9ddb8e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Alexander Kurtakov
Date: 2022-04-04 10:08:33.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Platform Bot
Date: 2022-04-04 10:14:51.000000000
Message: 
Patch Set 1:

Build started https://ci.eclipse.org/platform/job/eclipse.platform.ui/job/65%252F192465%252F1/1/
----------------------------------------------------------------------------------------------------------------------
Author: Platform Bot
Date: 2022-04-04 10:54:52.000000000
Message: 
Patch Set 1: Verified-1

Build and test are OK, but Eclipse project is currently in a code freeze period.
Please wait for end of code freeze period before merging.
 https://ci.eclipse.org/platform/job/eclipse.platform.ui/job/65%252F192465%252F1/1/
----------------------------------------------------------------------------------------------------------------------
Author: Alexander Kurtakov
Date: 2022-04-04 11:01:25.000000000
Message: 
Patch Set 1: Verified+1 Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Alexander Kurtakov
Date: 2022-04-04 11:01:28.000000000
Message: 
Removed Verified-1 by <GERRIT_ACCOUNT_255357>

----------------------------------------------------------------------------------------------------------------------
